@@ -52,7 +52,7 @@ public class SettingsController {
     private Hyperlink updateLink;
 
     @FXML
-    public void initialize() {// NOSONAR
+    public void initialize() {
         LOGGER.info("SettingsController init");
         setupStyleChoiceBox();
         setupLoadChoiceBoxes();
@@ -61,8 +61,8 @@ public class SettingsController {
         sortCheckBox.setSelected(settings.getSortTwitch().get());
         oauthTextField.setText(settings.getTwitchOAuth());
         usernameTextField.setText(settings.getTwitchUser());
-        gamesToLoadChoiceBox.getSelectionModel().select(new Integer(settings.getMaxGamesLoad()));
-        channelsToLoadChoiceBox.getSelectionModel().select(new Integer(settings.getMaxChannelsLoad()));
+        gamesToLoadChoiceBox.getSelectionModel().select(Integer.valueOf(settings.getMaxGamesLoad()));
+        channelsToLoadChoiceBox.getSelectionModel().select(Integer.valueOf(settings.getMaxChannelsLoad()));
 
         sortCheckBox.setOnAction(event -> settings.getSortTwitch().setValue(sortCheckBox.isSelected()));
         usernameTextField.textProperty()
